--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,13 @@
 live-build (4.0.3-1kali2) kali-dev; urgency=medium
 
-  * Update patch efi
+  [ Sophie Brun ]
+  * Update EFI patch.
+
+  [ Raphaël Hertzog ]
+  * Improve package list parsing code in multiple ways:
+    - fix the #if conditionals
+    - accept comments in those files
+    - do not fail on empty package lists
 
  -- Sophie Brun <sophie@freexian.com>  Tue, 02 Dec 2014 15:56:49 +0100
 
