--- a/manpages/po/ja/lb_config.1.po
+++ b/manpages/po/ja/lb_config.1.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: live-build\n"
-"POT-Creation-Date: 2014-10-25 14:34+0200\n"
+"POT-Creation-Date: 2014-12-10 08:24+0100\n"
 "PO-Revision-Date: 2014-09-07 13:13+0900\n"
 "Last-Translator: victory <victory.deb@gmail.com>\n"
 "Language-Team: none\n"
@@ -27,7 +27,7 @@ msgstr "LIVE-BUILD"
 #: en/lb_chroot.1:1 en/lb_clean.1:1 en/lb_config.1:1 en/lb_source.1:1
 #: en/live-build.7:1
 #, no-wrap
-msgid "2014-10-25"
+msgid "2014-12-10"
 msgstr ""
 
 #. type: TH
@@ -35,7 +35,7 @@ msgstr ""
 #: en/lb_chroot.1:1 en/lb_clean.1:1 en/lb_config.1:1 en/lb_source.1:1
 #: en/live-build.7:1
 #, no-wrap
-msgid "4.0.3-1"
+msgid "4.0.4-1"
 msgstr ""
 
 #. type: TH
@@ -262,7 +262,9 @@ msgstr "  [B<--bootappend-live> I<パラメータ>|I<\"パラメータ\">]"
 
 #. type: Plain text
 #: en/lb_config.1:43
-msgid "  [B<--bootloader> grub|syslinux]"
+#, fuzzy
+#| msgid "  [B<--bootloader> grub|syslinux]"
+msgid "  [B<--bootloader> grub|grub2|syslinux]"
 msgstr "  [B<--bootloader> grub|syslinux]"
 
 #. type: Plain text
@@ -1048,8 +1050,9 @@ msgstr ""
 
 #. type: IP
 #: en/lb_config.1:268
-#, no-wrap
-msgid "B<--bootloader> grub|syslinux"
+#, fuzzy, no-wrap
+#| msgid "B<--bootloader> grub|syslinux"
+msgid "B<--bootloader> grub|grub2|syslinux"
 msgstr "B<--bootloader> grub|syslinux"
 
 #. type: Plain text
