Better handle empty package lists (second try).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+live-build (4.0.4-1kali2) UNRELEASED; urgency=medium
+
+  * Better handle empty package lists (second try).
+
+ -- Raphaël Hertzog <hertzog@debian.org>  Wed, 10 Dec 2014 16:03:17 +0100
+
 live-build (4.0.4-1kali1) kali-dev; urgency=medium
 
   * Update on top of live-build 4.0.4-1. Remaining changes:
