Do not try to include elilo, it's gone from Debian Testing.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+live-build (4.0.4-1kali7) kali-dev; urgency=medium
+
+  * Do not try to include elilo, it's gone from Debian Testing.
+
+ -- Raphaël Hertzog <hertzog@debian.org>  Wed, 15 Jul 2015 12:16:00 +0200
+
 live-build (4.0.4-1kali6) kali-dev; urgency=medium
 
   * Make sure apt-ftparchive does not fail due to #693092.
