--- a/manpages/po/fr/lb_bootstrap.1.po
+++ b/manpages/po/fr/lb_bootstrap.1.po
@@ -1,19 +1,17 @@
-# SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Live Systems Project
-# This file is distributed under the same license as the live-build package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# French translation of the live-build manpage
+# Copyright (C) 2015 Olivier Humbert <trebmuh@tuxfamily.org>.
+# This file is distributed under the same license as the live-images package.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: live-build 5.0~a11-1\n"
 "POT-Creation-Date: 2015-10-21 02:21+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2015-09-20 14:53+0200\n"
+"Last-Translator: Olivier Humbert <trebmuh@tuxfamily.org>\n"
+"Language-Team: none\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. type: TH
@@ -22,7 +20,7 @@ msgstr ""
 #: en/live-build.7:1
 #, no-wrap
 msgid "LIVE-BUILD"
-msgstr ""
+msgstr "LIVE-BUILD"
 
 #. type: TH
 #: en/lb.1:1 en/lb_binary.1:1 en/lb_bootstrap.1:1 en/lb_build.1:1
@@ -30,7 +28,7 @@ msgstr ""
 #: en/live-build.7:1
 #, no-wrap
 msgid "2015-10-21"
-msgstr ""
+msgstr "21.10.2015"
 
 #. type: TH
 #: en/lb.1:1 en/lb_binary.1:1 en/lb_bootstrap.1:1 en/lb_build.1:1
@@ -38,7 +36,7 @@ msgstr ""
 #: en/live-build.7:1
 #, no-wrap
 msgid "5.0~a11-1"
-msgstr ""
+msgstr "5.0~a11-1"
 
 #. type: TH
 #: en/lb.1:1 en/lb_binary.1:1 en/lb_bootstrap.1:1 en/lb_build.1:1
@@ -46,7 +44,7 @@ msgstr ""
 #: en/live-build.7:1
 #, no-wrap
 msgid "Live Systems Project"
-msgstr ""
+msgstr "Projet Live Systems"
 
 #. type: SH
 #: en/lb.1:3 en/lb_binary.1:3 en/lb_bootstrap.1:3 en/lb_build.1:3
@@ -54,7 +52,7 @@ msgstr ""
 #: en/live-build.7:3
 #, no-wrap
 msgid "NAME"
-msgstr ""
+msgstr "NOM"
 
 #. type: SH
 #: en/lb.1:6 en/lb_binary.1:6 en/lb_bootstrap.1:6 en/lb_build.1:6
@@ -62,7 +60,7 @@ msgstr ""
 #: en/live-build.7:6
 #, no-wrap
 msgid "SYNOPSIS"
-msgstr ""
+msgstr "SYNOPSIS"
 
 #. type: SH
 #: en/lb.1:11 en/lb_binary.1:9 en/lb_bootstrap.1:9 en/lb_build.1:9
@@ -70,7 +68,7 @@ msgstr ""
 #: en/live-build.7:11
 #, no-wrap
 msgid "DESCRIPTION"
-msgstr ""
+msgstr "DESCRIPTION"
 
 #. type: SH
 #: en/lb.1:16 en/lb_binary.1:14 en/lb_bootstrap.1:14 en/lb_build.1:14
@@ -78,7 +76,7 @@ msgstr ""
 #: en/live-build.7:20
 #, no-wrap
 msgid "OPTIONS"
-msgstr ""
+msgstr "OPTIONS"
 
 #. type: SH
 #: en/lb.1:19 en/lb_binary.1:17 en/lb_bootstrap.1:17 en/lb_build.1:17
@@ -86,7 +84,14 @@ msgstr ""
 #: en/live-build.7:213
 #, no-wrap
 msgid "FILES"
-msgstr ""
+msgstr "FICHIERS"
+
+#. type: IP
+#: en/lb.1:20 en/lb_binary.1:18 en/lb_bootstrap.1:18 en/lb_chroot.1:18
+#: en/lb_source.1:18
+#, no-wrap
+msgid "B<none>"
+msgstr "B<aucun>"
 
 #. type: SH
 #: en/lb.1:22 en/lb_binary.1:20 en/lb_bootstrap.1:20 en/lb_build.1:22
@@ -94,20 +99,20 @@ msgstr ""
 #: en/live-build.7:217
 #, no-wrap
 msgid "SEE ALSO"
-msgstr ""
+msgstr "VOIR AUSSI"
 
 #. type: Plain text
 #: en/lb.1:24 en/lb_binary.1:22 en/lb_bootstrap.1:22 en/lb_build.1:24
 #: en/lb_chroot.1:22 en/lb_clean.1:45 en/lb_config.1:471 en/lb_source.1:22
 msgid "I<live-build>(7)"
-msgstr ""
+msgstr "I<live-build>(7)"
 
 #. type: Plain text
 #: en/lb.1:26 en/lb_binary.1:24 en/lb_bootstrap.1:24 en/lb_build.1:26
 #: en/lb_chroot.1:24 en/lb_clean.1:47 en/lb_config.1:477 en/lb_source.1:24
 #: en/live-build.7:223
 msgid "This program is a part of live-build."
-msgstr ""
+msgstr "Ce programme est une partie de live-build."
 
 #. type: SH
 #: en/lb.1:27 en/lb_binary.1:25 en/lb_bootstrap.1:25 en/lb_build.1:27
@@ -115,7 +120,7 @@ msgstr ""
 #: en/live-build.7:224
 #, no-wrap
 msgid "HOMEPAGE"
-msgstr ""
+msgstr "PAGE D'ACCUEIL"
 
 #. type: Plain text
 #: en/lb.1:29 en/lb_binary.1:27 en/lb_bootstrap.1:27 en/lb_build.1:29
@@ -126,6 +131,9 @@ msgid ""
 "on the homepage at E<lt>I<http://live-systems.org/>E<gt> and in the manual "
 "at E<lt>I<http://live-systems.org/manual/>E<gt>."
 msgstr ""
+"Davantage d'informations à propos de live-build et du projet Live Systems "
+"peuvent être trouvées sur la page d'accueil à E<lt>I<http://live-systems.org/"
+">E<gt> et dans le manuel à E<lt>I<http://live-systems.org/manual/>E<gt>."
 
 #. type: SH
 #: en/lb.1:30 en/lb_binary.1:28 en/lb_bootstrap.1:28 en/lb_build.1:30
@@ -133,7 +141,7 @@ msgstr ""
 #: en/live-build.7:227
 #, no-wrap
 msgid "BUGS"
-msgstr ""
+msgstr "BOGUES"
 
 #. type: Plain text
 #: en/lb.1:32 en/lb_binary.1:30 en/lb_bootstrap.1:30 en/lb_build.1:32
@@ -145,6 +153,10 @@ msgid ""
 "writing a mail to the Live Systems mailing list at E<lt>I<debian-live@lists."
 "debian.org>E<gt>."
 msgstr ""
+"Les bogues peuvent être signalés en soumettant un rapport de bogue pour le "
+"paquet live-build dans le BTS à E<lt>I<http://bugs.debian.org/>E<gt> ou par "
+"l'écriture d'un courriel à la liste de diffusion Live Systems à "
+"E<lt>I<debian-live@lists.debian.org>E<gt>."
 
 #. type: SH
 #: en/lb.1:33 en/lb_binary.1:31 en/lb_bootstrap.1:31 en/lb_build.1:33
@@ -152,7 +164,7 @@ msgstr ""
 #: en/live-build.7:230
 #, no-wrap
 msgid "AUTHOR"
-msgstr ""
+msgstr "AUTEUR"
 
 #. type: Plain text
 #: en/lb.1:34 en/lb_binary.1:32 en/lb_bootstrap.1:32 en/lb_build.1:34
@@ -161,140 +173,44 @@ msgstr ""
 msgid ""
 "live-build was written by Daniel Baumann E<lt>I<mail@daniel-baumann.ch>E<gt>."
 msgstr ""
+"live-images a été écrit par Daniel Baumann E<lt>I<mail@daniel-baumann."
+"ch>E<gt>."
 
 #. type: Plain text
-#: en/lb_clean.1:5
-msgid "B<lb clean> - Clean build directory"
-msgstr ""
+#: en/lb_bootstrap.1:5
+msgid "B<lb bootstrap> - Complete the bootstrap stage"
+msgstr "B<lb bootstrap> - Complète le stage d'amorçage"
 
 #. type: Plain text
-#: en/lb_clean.1:8
-msgid "B<lb clean> [I<live-build options>]"
-msgstr ""
+#: en/lb_bootstrap.1:8
+msgid "B<lb bootstrap> [I<live-build options>]"
+msgstr "B<lb bootstrap> [I<live-build options>]"
 
 #. type: Plain text
-#: en/lb_clean.1:11
+#: en/lb_bootstrap.1:11
 msgid ""
-"B<lb clean> is a high-level command (porcelain) of I<live-build>(7), the "
+"B<lb bootstrap> is a high-level command (porcelain) of I<live-build>(7), the "
 "live systems tool suite."
 msgstr ""
+"B<lb bootstrap> est une commande de haut-niveau (porcelaine) de I<live-"
+"build>(7), la suite d'outils de live-systems."
 
-#.  FIXME
-#.  FIXME
 #. type: Plain text
-#: en/lb_clean.1:15
+#: en/lb_bootstrap.1:13
 msgid ""
-"B<lb clean> is responsible for cleaning up after a system is built. It "
-"removes the build directories, and removes some other files including stage "
-"files, and any detritus left behind by other live-build commands."
+"B<lb bootstrap> calls all necessary live-build programs in the correct order "
+"to complete the bootstrap stage."
 msgstr ""
+"B<lb bootstrap> appelle tous les programmes live-build nécessaires dans le "
+"bon ordre pour complèter le stage d'amorçage."
 
 #. type: Plain text
-#: en/lb_clean.1:18
+#: en/lb_bootstrap.1:16
 msgid ""
-"In addition to its specific options B<lb clean> understands all generic live-"
+"B<lb bootstrap> has no specific options but understands all generic live-"
 "build options. See I<live-build>(7) for a complete list of all generic live-"
 "build options."
 msgstr ""
-
-#.  FIXME
-#. type: IP
-#: en/lb_clean.1:20
-#, no-wrap
-msgid "B<--all>"
-msgstr ""
-
-#. type: Plain text
-#: en/lb_clean.1:22
-msgid ""
-"removes chroot, binary, stage, and source. The cache directory is kept. This "
-"is the default operation and will be performed if no argument is given."
-msgstr ""
-
-#. type: IP
-#: en/lb_clean.1:22
-#, no-wrap
-msgid "B<--cache>"
-msgstr ""
-
-#. type: Plain text
-#: en/lb_clean.1:24
-msgid "removes the cache directories."
-msgstr ""
-
-#. type: IP
-#: en/lb_clean.1:24
-#, no-wrap
-msgid "B<--chroot>"
-msgstr ""
-
-#. type: Plain text
-#: en/lb_clean.1:26
-msgid "unmounts and removes the chroot directory."
-msgstr ""
-
-#. type: IP
-#: en/lb_clean.1:26
-#, no-wrap
-msgid "B<--binary>"
-msgstr ""
-
-#. type: Plain text
-#: en/lb_clean.1:28
-msgid ""
-"removes all binary related caches, files, directories, and stages files."
-msgstr ""
-
-#. type: IP
-#: en/lb_clean.1:28
-#, no-wrap
-msgid "B<--purge>"
-msgstr ""
-
-#. type: Plain text
-#: en/lb_clean.1:30
-msgid "removes everything, including all caches. The config directory is kept."
-msgstr ""
-
-#. type: IP
-#: en/lb_clean.1:30
-#, no-wrap
-msgid "B<--remove>"
-msgstr ""
-
-#. type: Plain text
-#: en/lb_clean.1:32
-msgid ""
-"removes everything, including package cache but not stage cache. The config "
-"directory is kept."
-msgstr ""
-
-#. type: IP
-#: en/lb_clean.1:32
-#, no-wrap
-msgid "B<--stage>"
-msgstr ""
-
-#. type: Plain text
-#: en/lb_clean.1:34
-msgid "removes all stage files."
-msgstr ""
-
-#. type: IP
-#: en/lb_clean.1:34
-#, no-wrap
-msgid "B<--source>"
-msgstr ""
-
-#.  FIXME
-#. type: Plain text
-#: en/lb_clean.1:37
-msgid "removes all source related caches, files, directories, and stage files."
-msgstr ""
-
-#.  FIXME
-#. type: IP
-#: en/lb_clean.1:40
-#, no-wrap
-msgid "B<auto/clean>"
-msgstr ""
+"B<lb bootstrap> n'a pas d'options spécifiques mais fonctionne avec toutes "
+"les options génériques de live-build. Voir I<live-build>(7) pour une liste "
+"complète de toutes les options génériques de live-build options."
