--- a/manpages/po/fr/lb_clean.1.po
+++ b/manpages/po/fr/lb_clean.1.po
@@ -1,19 +1,17 @@
-# SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Live Systems Project
-# This file is distributed under the same license as the live-build package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# French translation of the live-build manpage
+# Copyright (C) 2015 Olivier Humbert <trebmuh@tuxfamily.org>.
+# This file is distributed under the same license as the live-images package.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: live-build 5.0~a11-1\n"
 "POT-Creation-Date: 2015-10-21 02:21+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2015-09-20 14:53+0200\n"
+"Last-Translator: Olivier Humbert <trebmuh@tuxfamily.org>\n"
+"Language-Team: none\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. type: TH
@@ -22,7 +20,7 @@ msgstr ""
 #: en/live-build.7:1
 #, no-wrap
 msgid "LIVE-BUILD"
-msgstr ""
+msgstr "LIVE-BUILD"
 
 #. type: TH
 #: en/lb.1:1 en/lb_binary.1:1 en/lb_bootstrap.1:1 en/lb_build.1:1
@@ -30,7 +28,7 @@ msgstr ""
 #: en/live-build.7:1
 #, no-wrap
 msgid "2015-10-21"
-msgstr ""
+msgstr "21.10.2015"
 
 #. type: TH
 #: en/lb.1:1 en/lb_binary.1:1 en/lb_bootstrap.1:1 en/lb_build.1:1
@@ -38,7 +36,7 @@ msgstr ""
 #: en/live-build.7:1
 #, no-wrap
 msgid "5.0~a11-1"
-msgstr ""
+msgstr "5.0~a11-1"
 
 #. type: TH
 #: en/lb.1:1 en/lb_binary.1:1 en/lb_bootstrap.1:1 en/lb_build.1:1
@@ -46,7 +44,7 @@ msgstr ""
 #: en/live-build.7:1
 #, no-wrap
 msgid "Live Systems Project"
-msgstr ""
+msgstr "Projet Live Systems"
 
 #. type: SH
 #: en/lb.1:3 en/lb_binary.1:3 en/lb_bootstrap.1:3 en/lb_build.1:3
@@ -54,7 +52,7 @@ msgstr ""
 #: en/live-build.7:3
 #, no-wrap
 msgid "NAME"
-msgstr ""
+msgstr "NOM"
 
 #. type: SH
 #: en/lb.1:6 en/lb_binary.1:6 en/lb_bootstrap.1:6 en/lb_build.1:6
@@ -62,7 +60,7 @@ msgstr ""
 #: en/live-build.7:6
 #, no-wrap
 msgid "SYNOPSIS"
-msgstr ""
+msgstr "SYNOPSIS"
 
 #. type: SH
 #: en/lb.1:11 en/lb_binary.1:9 en/lb_bootstrap.1:9 en/lb_build.1:9
@@ -70,7 +68,7 @@ msgstr ""
 #: en/live-build.7:11
 #, no-wrap
 msgid "DESCRIPTION"
-msgstr ""
+msgstr "DESCRIPTION"
 
 #. type: SH
 #: en/lb.1:16 en/lb_binary.1:14 en/lb_bootstrap.1:14 en/lb_build.1:14
@@ -78,7 +76,7 @@ msgstr ""
 #: en/live-build.7:20
 #, no-wrap
 msgid "OPTIONS"
-msgstr ""
+msgstr "OPTIONS"
 
 #. type: SH
 #: en/lb.1:19 en/lb_binary.1:17 en/lb_bootstrap.1:17 en/lb_build.1:17
@@ -86,7 +84,7 @@ msgstr ""
 #: en/live-build.7:213
 #, no-wrap
 msgid "FILES"
-msgstr ""
+msgstr "FICHIERS"
 
 #. type: SH
 #: en/lb.1:22 en/lb_binary.1:20 en/lb_bootstrap.1:20 en/lb_build.1:22
@@ -94,20 +92,20 @@ msgstr ""
 #: en/live-build.7:217
 #, no-wrap
 msgid "SEE ALSO"
-msgstr ""
+msgstr "VOIR AUSSI"
 
 #. type: Plain text
 #: en/lb.1:24 en/lb_binary.1:22 en/lb_bootstrap.1:22 en/lb_build.1:24
 #: en/lb_chroot.1:22 en/lb_clean.1:45 en/lb_config.1:471 en/lb_source.1:22
 msgid "I<live-build>(7)"
-msgstr ""
+msgstr "I<live-build>(7)"
 
 #. type: Plain text
 #: en/lb.1:26 en/lb_binary.1:24 en/lb_bootstrap.1:24 en/lb_build.1:26
 #: en/lb_chroot.1:24 en/lb_clean.1:47 en/lb_config.1:477 en/lb_source.1:24
 #: en/live-build.7:223
 msgid "This program is a part of live-build."
-msgstr ""
+msgstr "Ce programme est une partie de live-build."
 
 #. type: SH
 #: en/lb.1:27 en/lb_binary.1:25 en/lb_bootstrap.1:25 en/lb_build.1:27
@@ -115,7 +113,7 @@ msgstr ""
 #: en/live-build.7:224
 #, no-wrap
 msgid "HOMEPAGE"
-msgstr ""
+msgstr "PAGE D'ACCUEIL"
 
 #. type: Plain text
 #: en/lb.1:29 en/lb_binary.1:27 en/lb_bootstrap.1:27 en/lb_build.1:29
@@ -126,6 +124,9 @@ msgid ""
 "on the homepage at E<lt>I<http://live-systems.org/>E<gt> and in the manual "
 "at E<lt>I<http://live-systems.org/manual/>E<gt>."
 msgstr ""
+"Davantage d'informations à propos de live-build et du projet Live Systems "
+"peuvent être trouvées sur la page d'accueil à E<lt>I<http://live-systems.org/"
+">E<gt> et dans le manuel à E<lt>I<http://live-systems.org/manual/>E<gt>."
 
 #. type: SH
 #: en/lb.1:30 en/lb_binary.1:28 en/lb_bootstrap.1:28 en/lb_build.1:30
@@ -133,7 +134,7 @@ msgstr ""
 #: en/live-build.7:227
 #, no-wrap
 msgid "BUGS"
-msgstr ""
+msgstr "BOGUES"
 
 #. type: Plain text
 #: en/lb.1:32 en/lb_binary.1:30 en/lb_bootstrap.1:30 en/lb_build.1:32
@@ -145,6 +146,10 @@ msgid ""
 "writing a mail to the Live Systems mailing list at E<lt>I<debian-live@lists."
 "debian.org>E<gt>."
 msgstr ""
+"Les bogues peuvent être signalés en soumettant un rapport de bogue pour le "
+"paquet live-build dans le BTS à E<lt>I<http://bugs.debian.org/>E<gt> ou par "
+"l'écriture d'un courriel à la liste de diffusion Live Systems à "
+"E<lt>I<debian-live@lists.debian.org>E<gt>."
 
 #. type: SH
 #: en/lb.1:33 en/lb_binary.1:31 en/lb_bootstrap.1:31 en/lb_build.1:33
@@ -152,7 +157,7 @@ msgstr ""
 #: en/live-build.7:230
 #, no-wrap
 msgid "AUTHOR"
-msgstr ""
+msgstr "AUTEUR"
 
 #. type: Plain text
 #: en/lb.1:34 en/lb_binary.1:32 en/lb_bootstrap.1:32 en/lb_build.1:34
@@ -161,16 +166,18 @@ msgstr ""
 msgid ""
 "live-build was written by Daniel Baumann E<lt>I<mail@daniel-baumann.ch>E<gt>."
 msgstr ""
+"live-images a été écrit par Daniel Baumann E<lt>I<mail@daniel-baumann."
+"ch>E<gt>."
 
 #. type: Plain text
 #: en/lb_clean.1:5
 msgid "B<lb clean> - Clean build directory"
-msgstr ""
+msgstr "B<lb clean> - Nettoie le répertoire de construction"
 
 #. type: Plain text
 #: en/lb_clean.1:8
 msgid "B<lb clean> [I<live-build options>]"
-msgstr ""
+msgstr "B<lb clean> [I<live-build options>]"
 
 #. type: Plain text
 #: en/lb_clean.1:11
@@ -178,6 +185,8 @@ msgid ""
 "B<lb clean> is a high-level command (porcelain) of I<live-build>(7), the "
 "live systems tool suite."
 msgstr ""
+"B<lb clean> est une commande de haut-niveau (porcelaine) de I<live-"
+"build>(7), la suite d'outils de live-systems."
 
 #.  FIXME
 #.  FIXME
@@ -188,6 +197,10 @@ msgid ""
 "removes the build directories, and removes some other files including stage "
 "files, and any detritus left behind by other live-build commands."
 msgstr ""
+"B<lb clean> est responsable du nettoyage après la construction d'un système. "
+"Il supprime les répertoires de constructions, et supprime d'autres fichiers "
+"y compris les fichiers de stage, et tout détritus oublié par les autres "
+"commandes live-build."
 
 #. type: Plain text
 #: en/lb_clean.1:18
@@ -196,13 +209,16 @@ msgid ""
 "build options. See I<live-build>(7) for a complete list of all generic live-"
 "build options."
 msgstr ""
+"En plus de ses options spécifiques B<lb clean> fonctionne avec toutes les "
+"options génériques de live-build. Voir I<live-build>(7) pour une liste "
+"complète de toutes les options génériques de live-build options."
 
 #.  FIXME
 #. type: IP
 #: en/lb_clean.1:20
 #, no-wrap
 msgid "B<--all>"
-msgstr ""
+msgstr "B<--all>"
 
 #. type: Plain text
 #: en/lb_clean.1:22
@@ -210,57 +226,64 @@ msgid ""
 "removes chroot, binary, stage, and source. The cache directory is kept. This "
 "is the default operation and will be performed if no argument is given."
 msgstr ""
+"supprimes le chroot, le binaire, le stage et la source. Le répertoire de "
+"cache est conservé. C'est l'opération par défaut et sera activé si aucun "
+"argument n'est donné."
 
 #. type: IP
 #: en/lb_clean.1:22
 #, no-wrap
 msgid "B<--cache>"
-msgstr ""
+msgstr "B<--cache>"
 
 #. type: Plain text
 #: en/lb_clean.1:24
 msgid "removes the cache directories."
-msgstr ""
+msgstr "supprime les répertoires de cache."
 
 #. type: IP
 #: en/lb_clean.1:24
 #, no-wrap
 msgid "B<--chroot>"
-msgstr ""
+msgstr "B<--chroot>"
 
 #. type: Plain text
 #: en/lb_clean.1:26
 msgid "unmounts and removes the chroot directory."
-msgstr ""
+msgstr "démonte et retire le répertoire de chroot."
 
 #. type: IP
 #: en/lb_clean.1:26
 #, no-wrap
 msgid "B<--binary>"
-msgstr ""
+msgstr "B<--binary>"
 
 #. type: Plain text
 #: en/lb_clean.1:28
 msgid ""
 "removes all binary related caches, files, directories, and stages files."
 msgstr ""
+"supprime tous les caches, fichiers, répertoires et fichiers de stage "
+"relatifs au binaire."
 
 #. type: IP
 #: en/lb_clean.1:28
 #, no-wrap
 msgid "B<--purge>"
-msgstr ""
+msgstr "B<--purge>"
 
 #. type: Plain text
 #: en/lb_clean.1:30
 msgid "removes everything, including all caches. The config directory is kept."
 msgstr ""
+"supprime tout, y compris tous les caches. Le répertoire de configuration est "
+"conservé."
 
 #. type: IP
 #: en/lb_clean.1:30
 #, no-wrap
 msgid "B<--remove>"
-msgstr ""
+msgstr "B<--remove>"
 
 #. type: Plain text
 #: en/lb_clean.1:32
@@ -268,33 +291,37 @@ msgid ""
 "removes everything, including package cache but not stage cache. The config "
 "directory is kept."
 msgstr ""
+"supprime tout, y compris le cache des paquets mais pas le cache de stage. Le "
+"répertoire de configuration est conservé."
 
 #. type: IP
 #: en/lb_clean.1:32
 #, no-wrap
 msgid "B<--stage>"
-msgstr ""
+msgstr "B<--stage>"
 
 #. type: Plain text
 #: en/lb_clean.1:34
 msgid "removes all stage files."
-msgstr ""
+msgstr "supprime tous les fichiers de stage."
 
 #. type: IP
 #: en/lb_clean.1:34
 #, no-wrap
 msgid "B<--source>"
-msgstr ""
+msgstr "B<--source>"
 
 #.  FIXME
 #. type: Plain text
 #: en/lb_clean.1:37
 msgid "removes all source related caches, files, directories, and stage files."
 msgstr ""
+"supprime tous les caches, fichiers, répertoires et fichiers de stage "
+"relatifs aux sources."
 
 #.  FIXME
 #. type: IP
 #: en/lb_clean.1:40
 #, no-wrap
 msgid "B<auto/clean>"
-msgstr ""
+msgstr "B<auto/clean>"
