--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+live-build (5.0~a11-1kali2) kali-dev; urgency=medium
+
+  * Add data/debian-cd/ symlinks for sana via debian/live-build.links.
+
+ -- Raphaël Hertzog <hertzog@debian.org>  Mon, 09 Nov 2015 17:16:18 +0100
+
 live-build (5.0~a11-1kali1) kali-dev; urgency=medium
 
   * Import new version from debian
