Removing 586 flavour for i386 architecture (Closes: #832705).
Signed-off-by: Daniel Baumann <daniel.baumann@open-infrastructure.net>

--- a/manpages/fr/lb_config.fr.1
+++ b/manpages/fr/lb_config.fr.1
@@ -536,7 +536,7 @@ debian kernel packages, you will not have to adjust it. If you decide to use
 custom kernel packages that do not follow the debian naming scheme, remember
 to set this option to the stub of the packages only (for debian this is
 linux\-image\-2.6), so that \fISTUB\fP\-\fIFLAVOUR\fP results in a valid package name
-(for debian e.g. linux\-image\-586). Preferably you use the meta package name,
+(for debian e.g. linux\-image\-686\-pae). Preferably you use the meta package name,
 if any, for the stub, so that your configuration is ABI independent. Also
 don't forget that you have to include stubs of the binary modules packages
 for unionfs or aufs, and squashfs if you built them out\-of\-tree.
