--- a/manpages/po/fr/lb_config.1.po
+++ b/manpages/po/fr/lb_config.1.po
@@ -1745,7 +1745,7 @@ msgid ""
 "custom kernel packages that do not follow the debian naming scheme, remember "
 "to set this option to the stub of the packages only (for debian this is "
 "linux-image-2.6), so that I<STUB>-I<FLAVOUR> results in a valid package name "
-"(for debian e.g. linux-image-586). Preferably you use the meta package name, "
+"(for debian e.g. linux-image-686-pae). Preferably you use the meta package name, "
 "if any, for the stub, so that your configuration is ABI independent. Also "
 "don't forget that you have to include stubs of the binary modules packages "
 "for unionfs or aufs, and squashfs if you built them out-of-tree."
