--- a/manpages/po/ja/lb_config.1.po
+++ b/manpages/po/ja/lb_config.1.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: live-build\n"
-"POT-Creation-Date: 2015-08-23 10:57+0200\n"
+"POT-Creation-Date: 2015-10-21 02:21+0200\n"
 "PO-Revision-Date: 2015-02-07 14:57+0900\n"
 "Last-Translator: victory <victory.deb@gmail.com>\n"
 "Language-Team: none\n"
@@ -27,7 +27,7 @@ msgstr "LIVE-BUILD"
 #: en/lb_chroot.1:1 en/lb_clean.1:1 en/lb_config.1:1 en/lb_source.1:1
 #: en/live-build.7:1
 #, fuzzy, no-wrap
-msgid "2015-08-23"
+msgid "2015-10-21"
 msgstr "2015-02-07"
 
 #. type: TH
@@ -1778,7 +1778,7 @@ msgid ""
 "custom kernel packages that do not follow the debian naming scheme, remember "
 "to set this option to the stub of the packages only (for debian this is "
 "linux-image-2.6), so that I<STUB>-I<FLAVOUR> results in a valid package name "
-"(for debian e.g. linux-image-586). Preferably you use the meta package name, "
+"(for debian e.g. linux-image-686-pae). Preferably you use the meta package name, "
 "if any, for the stub, so that your configuration is ABI independent. Also "
 "don't forget that you have to include stubs of the binary modules packages "
 "for unionfs or aufs, and squashfs if you built them out-of-tree."
@@ -1787,7 +1787,7 @@ msgstr ""
 "パッケージを利用している場合は調整する必要はありません。Debian の命名規則に従"
 "わない独自のカーネルパッケージを利用する場合にはこのオプションでパッケージの"
 "前半部 (Debian の場合は linux-image-2.6) だけを忘れずに指定し、I<前半部>-I<フ"
-"レーバー> (Debian の場合は例えば linux-image-586) が有効なパッケージ名になる"
+"レーバー> (Debian の場合は例えば linux-image-686-pae) が有効なパッケージ名になる"
 "ようにしてください。好ましいのは、メタパッケージがある場合にはその名前を前半"
 "部に使うことで、そうすると設定とABIが独立します。また、unionfs や aufs、"
 "squashfs のバイナリモジュールパッケージについても、ツリー外でビルドした場合に"
