--- a/manpages/pot/lb_config.1.pot
+++ b/manpages/pot/lb_config.1.pot
@@ -1,5 +1,5 @@
 # SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
+# Copyright (C) YEAR Live Systems Project
 # This file is distributed under the same license as the live-build package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: live-build 5.0~a11-1\n"
-"POT-Creation-Date: 2015-08-23 10:57+0200\n"
+"POT-Creation-Date: 2015-10-21 02:21+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,7 +29,7 @@ msgstr ""
 #: en/lb_chroot.1:1 en/lb_clean.1:1 en/lb_config.1:1 en/lb_source.1:1
 #: en/live-build.7:1
 #, no-wrap
-msgid "2015-08-23"
+msgid "2015-10-21"
 msgstr ""
 
 #. type: TH
@@ -1561,7 +1561,7 @@ msgid ""
 "custom kernel packages that do not follow the debian naming scheme, remember "
 "to set this option to the stub of the packages only (for debian this is "
 "linux-image-2.6), so that I<STUB>-I<FLAVOUR> results in a valid package name "
-"(for debian e.g. linux-image-586). Preferably you use the meta package name, "
+"(for debian e.g. linux-image-686-pae). Preferably you use the meta package name, "
 "if any, for the stub, so that your configuration is ABI independent. Also "
 "don't forget that you have to include stubs of the binary modules packages "
 "for unionfs or aufs, and squashfs if you built them out-of-tree."
