--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+live-build (3.0.5+really+is+2.0.12-0.tails5) builder-jessie; urgency=medium
+
+  [ Chris Lamb ]
+  * Add a Date utility that will use SOURCE_DATE_EPOCH if necessary.
+  * Use Date from functions/date.sh
+  * Ensure that syslinux templates (eg. f1.txt) use a reproducible timestamp.
+
+ -- intrigeri <intrigeri@boum.org>  Mon, 21 Nov 2016 16:46:34 +0000
+
 live-build (3.0.5+really+is+2.0.12-0.tails4) builder-jessie; urgency=medium
 
   [ Chris Lamb ]
