--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+live-build (3.0.5+really+is+2.0.12-0.tails5+update.squashfs.sort.file.1) 18655-zstd-squashfs; urgency=medium
+
+  * Add hook to modify the SquashFS sort file at build time
+
+ -- intrigeri <intrigeri@boum.org>  Fri, 05 Nov 2021 11:54:05 +0000
+
 live-build (3.0.5+really+is+2.0.12-0.tails5) builder-jessie; urgency=medium
 
   [ Chris Lamb ]
