--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+live-build (3.0.5+really+is+2.0.12-0.tails5+update.squashfs.sort.file.3) 18655-zstd-squashfs; urgency=medium
+
+  * Fix hook to modify the SquashFS sort file at build time
+
+ -- intrigeri <intrigeri@debian.org>  Fri, 05 Nov 2021 14:52:25 +0000
+
 live-build (3.0.5+really+is+2.0.12-0.tails5+update.squashfs.sort.file.2) 18655-zstd-squashfs; urgency=medium
 
   * Fix hook to modify the SquashFS sort file at build time
